Updated the post, gc_algorithms.
Signed-off-by: Dongho Sim <dhsim86@gmail.com>